--- a/index.html
+++ b/index.html
@@ -11,9 +11,21 @@
   		Enter your quote:
   	</label>
   	<input type="text" name="quote" required />
+	  <label>
+  		Enter your oauth_access_token:
+  	</label>
   	<input type="text" name="oauth_access_token" required />
+	  <label>
+  		Enter your oauth_access_token_secret:
+  	</label>
   	<input type="text" name="oauth_access_token_secret" required />
+	  <label>
+  		Enter your consumer_key:
+  	</label>
   	<input type="text" name="consumer_key" required />
+	  <label>
+  		Enter your consumer_secret:
+  	</label>
   	<input type="text" name="consumer_secret" required />
   	<input type="submit" name="Submit" />
   </form>
